eyed3 (0.8.2-1) UNRELEASED; urgency=low

  * New upstream version
  * Update Standards-Version to 4.1.1, no changes needed.
  * Drop patch fix-manpage-typo (fixed upstream)
  * Add patch support-debian-python-magic to use debian version of
    magic module
  
 -- Gaetano Guerriero <x.guerriero@tin.it>  Sat, 22 Jul 2017 00:14:04 +0200

eyed3 (0.8-1) unstable; urgency=low

  * New upstream version
  * Add d/upstream/metadata with CPE record of project (Closes: #848282)
  * Remove "display" plugin, it depends on "grako", missing in Debian

  * Upload sponsored by Petter Reinholdtsen.

 -- Gaetano Guerriero <x.guerriero@tin.it>  Sat, 15 Jul 2017 11:55:28 +0200

eyed3 (0.7.10-1) unstable; urgency=low

  * New upstream version
  * Fix homepage url in debian/copyright (Closes: #844260)
  * Fix wrong spelled option in manpage (Closes: #846586)
    Thanks to Edward Betts for the fix.

  * Upload sponsored by Petter Reinholdtsen.
  
 -- Gaetano Guerriero <x.guerriero@tin.it>  Thu, 15 Dec 2016 21:38:40 +0100

eyed3 (0.7.9-2) unstable; urgency=low

  * Ensure info.py.in is never regenerated, to prevent build reproducibility
    issues
  * Exclude info.py.in from binary distribution, it is useless
  * Fix Vcs-* control fields with debian packaging repository

  * Upload sponsored by Petter Reinholdtsen.

 -- Gaetano Guerriero <x.guerriero@tin.it>  Sun, 06 Nov 2016 18:59:07 +0000

eyed3 (0.7.9-1) unstable; urgency=low

  * New upstream version (Closes: #815123)
  * Drop patch reproducible-build (manpage is no longer generated)
  * Drop patch CVE-2014-1934, issue is fixed upstream
  * Add patch launch-script-with-system-python.patch to always start
    eyed3 script with system python (Closes: #720473)

  * Upload sponsored by Petter Reinholdtsen.

 -- Gaetano Guerriero <x.guerriero@tin.it>  Mon, 12 Sep 2016 06:25:26 +0000

eyed3 (0.6.18-3) unstable; urgency=medium

  * QA upload.
  * Added CVE-2014-1934.patch to avoid insecure use of /tmp/ (Closes:
    #737062).