@@ -2,7 +2,9 @@ Source: eyed3
 Section: sound
 Priority: optional
 Maintainer: Gaetano Guerriero <x.guerriero@tin.it>
-Build-Depends: debhelper (>= 10), dh-python, python-all, python-setuptools
+Build-Depends: debhelper (>= 10), dh-python,
+               python-all, python-setuptools,
+               python3, python3-setuptools
 Homepage: http://eyed3.nicfit.net/
 Standards-Version: 4.1.1
 X-Python-Version: >=2.7
@@ -18,6 +20,22 @@ Description: Python module for id3-tags manipulation
  A Python module for the manipulation of ID3 tags. It supports versions
  1.0, 1.1, 2.3, and 2.4 of the ID3 standard. It can also retrieve
  information such as length and bit rate from an MP3 file.
+ .
+ This is the Python 2 version of the package.
+
+
+Package: python3-eyed3
+Architecture: all
+Section: python
+Depends: ${misc:Depends}, ${python3:Depends}
+Provides: ${python:Provides}
+Description: Python module for id3-tags manipulation
+ A Python module for the manipulation of ID3 tags. It supports versions
+ 1.0, 1.1, 2.3, and 2.4 of the ID3 standard. It can also retrieve
+ information such as length and bit rate from an MP3 file.
+ .
+ This is the Python 3 version of the package.
+
 
 Package: eyed3
 Architecture: all
