@@ -1,1 +1,2 @@
 python_magic python3-magic
+pathlib python3
