@@ -1,10 +1,12 @@
 eyed3 (0.8.2-1) UNRELEASED; urgency=low
 
   * New upstream version
-  * Update Standards-Version to 4.1.1, no changes needed.
+  * Build also package for python3
   * Drop patch fix-manpage-typo (fixed upstream)
   * Add patch support-debian-python-magic to use debian version of
     magic module
+  * Update Standards-Version to 4.1.1, no changes needed.
+
   
  -- Gaetano Guerriero <x.guerriero@tin.it>  Sat, 22 Jul 2017 00:14:04 +0200
 
